redirectLBAWS/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "frontend"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:519901771307:certificate/2039f684-544b-4a54-baf2-b2b15ec0ecee
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.redirect-mf: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301", "host": "www.mifarma.com.pe"}}'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/tags: Environment=PRD-MF
  labels:
    app: us-frontend
spec:
  rules:
  - host: tienda.mifarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-mifarma2-r1"
          servicePort: 80
  - host: consultastock.mifarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-consulta-stock"
          servicePort: 80
  - host: inkadashboard-mfprd.cindibyinkafarma.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: "web-inkadashboard"
          servicePort: 80
  - host: tools-mfprd.cindibyinkafarma.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: "web-mifarma2-r1"
          servicePort: 80
  - host: beta.mifarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-mifarma2-r1"
          servicePort: 80
  - host: mifarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: redirect-mf
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-mifarma2"
          servicePort: 80
  - host: www.mifarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-mifarma2"
          servicePort: 80
