redirectLBAWS/frontend2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "frontend2"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:519901771307:certificate/4ba7290b-aaff-4ef7-b92c-5051a047270c,arn:aws:acm:us-east-1:519901771307:certificate/6ba717dc-ce50-4c7e-b154-29d6d2c00cd9,arn:aws:acm:us-east-1:519901771307:certificate/79179921-0358-4d92-b2c9-ecf3d40bac66
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Environment=PRD
    alb.ingress.kubernetes.io/actions.cloudfront: >
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"web-inkafarma2","ServicePort":"80"}]}}
    alb.ingress.kubernetes.io/conditions.cloudfront: >
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "X-Custom-Header", "values":["mnxiodmp78scrm5gdhcu"]}}]
    #alb.ingress.kubernetes.io/healthcheck-path: /
  labels:
    app: us-frontend2
spec:
  rules:

  - host: pharmadashboard.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkatrackerlite"
          servicePort: 80
  - host: inkatracker-2.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkatracker1-1"
          servicePort: 80
  - host: reclamos.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-libroreclamo"
          servicePort: 80
  - host: beta.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkafarma2"
          servicePort: 80
  - host: reclamos.inkafarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: "web-inkafarma2"
          servicePort: 80  
  - host: masterproductre.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: "us-masterproductre"
          servicePort: 80  
  - host: inkafarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkafarma2"
          servicePort: 80
  - host: www.inkafarma.com.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkafarma2"
          servicePort: 80
  - host: us-recetas-electronica.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: "us-receta-electronica"
          servicePort: 80
  - host: recetamedica.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-recetas-electronica"
          servicePort: 80
  - host: web-admin-operaciones.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-admin-operaciones"
          servicePort: 80
  - host: botica.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkatracker"
          servicePort: 80
  - host: botica-replica.inkafarma.pe
    http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-redirect
          servicePort: use-annotation
      - path: /*
        backend:
          serviceName: "web-inkatracker-replica"
          servicePort: 80
  - http:
      paths:
      - path: /*
        backend:
          serviceName: cloudfront
          servicePort: use-annotation
  
  - host: convenios.inkafarma.pe
    http:
      paths:
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
        - path: /*
          backend:
            serviceName: "fps-web-convenios"
            servicePort: 80

  - host: replica.inkafarma.pe
    http:
      paths:
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
        - path: /*
          backend:
            serviceName: "web-inkafarma2-r1"
            servicePort: 80
